# rasterization

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
ext/: CMakeLists.txt
include/: rasterizer.h
include/internal/: core.h  mathematics.h
include/resource/: texture.h
sample/: CMakeLists.txt  main.cpp
src/: loader.cpp  pch.h  rasterizer.cpp
src/internal/: mathematics.cpp
src/resource/: texture.cpp
src/stb/: stb_image.h
